adding the accessibility

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
   <nav class="mainNav">
     <h1 class="hidden">AV ACCESSIBILITY</h1>
-    <img class="logo" src="img/accessibility.svg" alt="accessibilty logo">
+    <a href=""><img class="logo" src="img/accessibility.svg" alt="accessibilty logo"></a>
     <ul>
       <li><a href="index.html">MUSIC</a></li>
       <li><a href="movie.html">MOVIE</a></li>
@@ -24,10 +24,12 @@
         <h4 class="hidden">MUSIC</h4>
         <img src="img/uFoundme.jpeg" alt="cover art1">
         <div class="controllers">
-          <button class="playButton" data-trackref="Albatroz">Play</button>
+          <button class="playButton" data-trackref="uFoundme">Play</button>
           <button class="pauseButton">Pause</button>
           <button class="rewindButton">Rewind</button>
         </div>
+        <div id='rg_embed_link_138503' class='rg_embed_link' data-song-id='138503'>Read <a href='https://genius.com/The-fray-you-found-me-lyrics'>“You Found Me” by The Fray</a> on Genius</div> <script crossorigin src='//genius.com/songs/138503/embed.js'></script>
+        <script crossorigin src='//genius.com/songs/138503/embed.js'></script>
       </div>
   </main>
 
