--- a/tvShow.html
+++ b/tvShow.html
@@ -10,7 +10,7 @@
 <body>
   <nav class="mainNav">
     <h1 class="hidden">AV ACCESSIBILITY</h1>
-    <img class="logo" src="img/accessibility.svg" alt="accessibilty logo">
+    <a href=""><img class="logo" src="img/accessibility.svg" alt="accessibilty logo"></a>
     <ul>
       <li><a href="index.html">MUSIC</a></li>
       <li><a href="movie.html">MOVIE</a></li>
@@ -21,21 +21,17 @@
   <main class="mediaContainer">
       <div>
         <h4 class="hidden">TV SHOW</h4>
-        <img src="img/STP_Interstate_Love_Song.jpeg" alt="cover art3">
-        <div class="controllers">
-          <button class="playButton" data-trackref="STP_Interstate_Love_Song">Play</button>
-          <button class="pauseButton">Pause</button>
-          <button class="rewindButton">Rewind</button>
-        </div>
+        <iframe class="vidCon" width="560" height="315" src="https://www.youtube.com/embed/PccNWiiIFa4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
       </div> 
 
   </main>
 
   <footer class="footer">
     <p class="note">
+      Turn on CC to see the Subtitle/CC.<br> 
       press TAB - to move from one focusable item to the next focusable item.<br>
       SHIFT+TAB - to reverse the direction.<br>
-      ENTER - Activate a link or button.<br> 
+      ENTER - Activate a link or button.
     </p>
     <p class="copyright">&copy2021 Elaine Balgos</p>
   </footer>
