--- a/movie.html
+++ b/movie.html
@@ -10,7 +10,7 @@
 <body>
   <nav class="mainNav">
     <h1 class="hidden">AV ACCESSIBILITY</h1>
-    <img class="logo" src="img/accessibility.svg" alt="accessibilty logo">
+    <a href=""><img class="logo" src="img/accessibility.svg" alt="accessibilty logo"></a>
     <ul>
       <li><a href="index.html">MUSIC</a></li>
       <li><a href="movie.html">MOVIE</a></li>
@@ -19,13 +19,10 @@
   </nav>
 
   <main class="mediaContainer">
-    <audio src=""></audio>
-
-      <div>
-        <h4 class="hidden">MOVIE</h4>
-        <iframe class="vidCon" width="560" height="315" src="https://www.youtube.com/embed/e3Nl_TCQXuw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-      </div>
-
+    <div>
+      <h4 class="hidden">MOVIE</h4>
+      <iframe class="vidCon" width="560" height="315" src="https://www.youtube.com/embed/e3Nl_TCQXuw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    </div>
   </main>
 
   <footer class="footer">
