--- a/tvShow.html
+++ b/tvShow.html
@@ -7,6 +7,11 @@
   <link rel="stylesheet" href="css/main.css">
   <title>AV Accesibility</title>
 </head>
+
+<!-- fonts -->
+<link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+
 <body>
   <nav class="mainNav">
     <h1 class="hidden">AV ACCESSIBILITY</h1>
@@ -22,6 +27,17 @@
       <div>
         <h4 class="hidden">TV SHOW</h4>
         <iframe class="vidCon" width="560" height="315" src="https://www.youtube.com/embed/PccNWiiIFa4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+      </div>
+      <div class="desc">
+        <h3 class="title">Teen Titans Go - Space Advetnture</h3>
+        <div class="vidDesc">
+          <p>
+            Superhero roommates Robin, Cyborg, Starfire, Raven and Beast Boy<br> 
+            love saving the day, but what happens when they're done fighting crime?<br><br>
+
+            Genres: Animation | Short | Adventure | Comedy | Family | Sci-Fi<br><br>
+          </p>
+        </div>
       </div> 
 
   </main>
